// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errorHandler should match snapshot 1`] = `<Component />`;

exports[`errorHandler should match snapshot 2`] = `
<div
  className="error-container text-center"
>
  <h4>
    Test error message
  </h4>
  <button
    className="btn btn-default"
    onClick={true}
    style={
      Object {
        "margin": "1rem auto 0 auto",
      }
    }
  >
    Retry
  </button>
</div>
`;

exports[`errorHandler should match snapshot 3`] = `
<div
  className="error-container text-center"
>
  <h4>
    Test error message
  </h4>
</div>
`;
